<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.braingang.perkyblue.MainActivity">

    <Button
        android:id="@+id/buttonDiscoveryStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/discovery_start"/>

    <Button
        android:id="@+id/buttonDiscoveryCancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/discovery_cancel"
        app:layout_constraintTop_toBottomOf="@id/buttonDiscoveryStart"/>

    <Button
        android:id="@+id/buttonToggleRedLed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/led_red_toggle"
        app:layout_constraintTop_toBottomOf="@id/buttonDiscoveryCancel"/>

    <Button
        android:id="@+id/buttonToggleYellowLed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/led_yellow_toggle"
        app:layout_constraintTop_toBottomOf="@id/buttonToggleRedLed"/>

    <Button
        android:id="@+id/buttonToggleGreenLed"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/led_green_toggle"
        app:layout_constraintTop_toBottomOf="@id/buttonToggleYellowLed"/>

    <ListView
        android:id="@+id/lvBtDevice"
        android:background="#dddddd"
        android:dividerHeight="5dp"
        android:layout_height="300dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="6dp"
        app:layout_constraintTop_toBottomOf="@id/buttonToggleGreenLed"/>
</android.support.constraint.ConstraintLayout>
